# DDNS

./: .gitignore  .travis.yml  AGENTS.md  BUILD_DOCS.md  CNAME  Dockerfile  LICENSE  OPENWRT_VERIFICATION_REPORT.md  README.en.md  README.md  _config.yml  alidns.py  azure-pipelines.yml  build.cmd  build_docs.py  build_docs.sh  dnspod.py  docker-compose.yaml  entrypoint.sh  example.config.json  get-ipv4.ps1  install.sh  ip.py  package.json  pyproject.toml  release.md  run.bat  run.py  run.sh  schema.json  setup.cfg  setup.py  systemd.sh  task.bat  task.sh  test.py  test_install.sh  tmp_obj.json
.build/: Dockerfile  Setup.local  build.cmd  ddns.spec  entrypoint.sh  musl.Dockerfile  nuitka-package.config.yml  nuitka.cmd  nuitka.sh  patch.py  remove-python2.py  remove_python2.py
.github/: .copilotignore  AI_ASSESSMENT.md  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  copilot-instructions.md  dependabot.yml  install-patchelf.sh  patch.py  release-drafter.yml  release.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  debug-----.md  debug.md  feature_request.md  feature_request.yml  new-dns-provider.md  new_dns_provider.yml  other-issues.md
.github/agents/: docs.agent.md  new-provider.agent.md  new-provider.md
.github/instructions/: python.instructions.md
.github/prompts/: agent.prompt.md  bug-review.prompt.yml  feature-request.prompt.yml  issue-assistant.md  issue-strategy-bug.md  issue-strategy-feature.md  issue-strategy-question.md  question.prompt.yml
.github/scripts/: README.md  auto-reply.py  issue-ai-response.js  update_agents_structure.py
.github/workflows/: README.md  ai-assessment.yml  auto-reply-issue.yml  build-docs.yml  build-nuitka-dicker.yml  build-nuitka-docker.yml  build.yml  ci.yml  docker-github.yml  dockerhub.yml  nuitka-builder.yml  nuitka-docker-builder.yml  nuitka.yml  pr-docker.yml  publish.yml  python-build.yml  python-publish.yml  test-install.yml  test-openwrt-install.yml  update-agents.yml
.release/: README.md  create-task.bat  create-task.sh  create_task.systemd.sh
ddns/: __builtins__.pyi  __init__.py  __main__.py  cache.py  ip.py  task.py
ddns/config/: __init__.py  cli.py  config.py  env.py  file.py  json.py
ddns/provider/: __init__.py  _base.py  _signature.py  alidns.py  aliesa.py  base_dns_provider.py  callback.py  cloudflare.py  cloudns.py  debug.py  dnscom.py  dnspod.py  dnspod_com.py  edgeone.py  edgeone_dns.py  he.py  huaweidns.py  namecom.py  namesilo.py  noip.py  print.py  tencentcloud.py  west.py
ddns/scheduler/: __init__.py  _base.py  cron.py  launchd.py  schtasks.py  systemd.py  windows.py
ddns/task/: __init__.py  cron.py  launchd.py  schtasks.py  systemd.py
ddns/util/: cache.py  comment.py  config.py  fileio.py  http.py  ip.py  task.py  try_run.py  xml.py
dns/: alidns.py  callback.py  cloudflare.py  debug.py  dnscom.py  dnspod.py  dnspod_com.py  he.py  huaweidns.py
doc/: build_docs.sh  cli.en.md  cli.md  docker.en.md  docker.md  env.en.md  env.md  esa.js  esa.md  extra_fields_examples.md  install.en.md  install.md  json.en.md  json.md  llms.txt  package.json  release.md  setup-docs.mjs  task.en.md  task.md
doc/.vitepress/: config.mts
doc/config/: cli.en.md  cli.md  env.en.md  env.md  json.en.md  json.md
doc/dev/: config.en.md  config.md  provider.en.md  provider.md
doc/examples/: config-with-extra.json  run-with-extra.sh
doc/providers/: 51dns.en.md  51dns.md  README.en.md  README.md  alidns.en.md  alidns.md  aliesa.en.md  aliesa.md  callback.en.md  callback.md  cloudflare.en.md  cloudflare.md  debug.en.md  debug.md  dnscom.en.md  dnscom.md  dnspod.en.md  dnspod.md  dnspod_com.en.md  dnspod_com.md  edgeone.en.md  edgeone.md  edgeone_dns.en.md  edgeone_dns.md  he.en.md  he.md  huaweidns.en.md  huaweidns.md  namecom.en.md  namecom.md  namesilo.en.md  namesilo.md  noip.en.md  noip.md  tencentcloud.en.md  tencentcloud.md  west.en.md  west.md
docker/: Dockerfile  entrypoint.sh  glibc.Dockerfile  musl.Dockerfile  test-in-docker.sh
docs/: docker.md  esa-deploy.md  esa.js  esa.jsonc  index.md  install.sh  llms.txt  openwrt.md  package.json  release.md  setup-docs.mjs
docs/.vitepress/: config.mts  format-sitemap.mjs  setup-docs.mjs
docs/config/: cli.md  env.md  json.en.md  json.md
docs/dev/: nuitka.md  provider.md
docs/en/: docker.en.md  docker.md  index.md  install.md  openwrt.md
docs/providers/: 51dns.md  README.md  alidns.en.md  alidns.md  aliesa.md  callback.md  cloudflare.md  cloudns.md  debug.en.md  debug.md  dnscom.md  dnspod.en.md  dnspod.md  dnspod_com.md  edgeone.md  edgeone_dns.md  he.md  huaweidns.md  namesilo.en.md  namesilo.md  noip.en.md  noip.md  tencentcloud.md
docs/public/: install.sh  schema
release/: README.md  create-task.sh
schema/: v2.10.json  v2.8.json  v2.json  v4.0.json  v4.1.json
scripts/: setup-docs.mjs
tests/: README.md  __init__.py  base_test.py  test_base.py  test_cache.py  test_callback_provider.py  test_config_cli.py  test_config_cli_extra.py  test_config_cli_task.py  test_config_config.py  test_config_env.py  test_config_env_extra.py  test_config_extra.py  test_config_file.py  test_config_file_remote.py  test_config_init.py  test_config_init_multi.py  test_config_json.py  test_config_log_file_dir.py  test_config_schema_v4_1.py  test_config_ssl.py  test_hmac_sha256_authorization.py  test_ip.py  test_ip_integration.py  test_main.py  test_multi_config.py  test_per_record_caching.py  test_provider__signature.py  test_provider_alidns.py  test_provider_aliesa.py  test_provider_base.py  test_provider_base_simple.py  test_provider_callback.py  test_provider_cloudflare.py  test_provider_cloudns.py  test_provider_debug.py  test_provider_dnscom.py  test_provider_dnspod.py  test_provider_dnspod_com.py  test_provider_edgeone.py  (+29 more)
tests/config/: callback.json  debug.json  he-proxies.json  multi-provider.json  noip.json
tests/scripts/: test-in-docker.sh  test-openwrt-install.sh  test-task-auto.sh  test-task-cron.sh  test-task-macos.sh  test-task-systemd.sh  test-task-windows.bat
util/: cache.py  config.py  ip.py  mail.py
(+40 files in other folders)
